--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@ rel="stylesheet">
 </head>
 <body>
     <header class="bg-primary text-white text-center py-3">
-        <img src="logo.png" alt="Logotipo" class="img-fluid" style="max-height: 100px;">
+        <img th:src="logo.png" alt="Logotipo" class="img-fluid" style="max-height: 100px;">
         <h1>Facultad de Ingenieria</h1>
         <p>Educación para el futuro</p>
     </header>
