--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>eeeee</title>
 <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
 rel="stylesheet">
