Parte alumnos terminado

--- a/src/main/resources/templates/formCarrer.html
+++ b/src/main/resources/templates/formCarrer.html
@@ -14,7 +14,7 @@
         <form th:object="${nuevaCarrera}" th:action="@{/guardarCarrera}" method="post">
             <div class="form-group">
                 <label for="codigo">Codigo</label>
-                <input type="text" class="form-control" id="codigo" th:field="*{codigo}" th:readonly="${nuevaCarrera.codigo != null}">
+                <input type="text" class="form-control" id="codigo" th:field="*{codigo}">
             </div>
             <div class="form-group">
                 <label for="nombre">Nombre de Carrera</label>
