--- a/src/main/resources/templates/listaDeMaterias.html
+++ b/src/main/resources/templates/listaDeMaterias.html
@@ -1,47 +1,135 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet"
-    th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Listado de Carreras</title>
+    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+    <style>
+        .btn-agregar {
+    position: absolute;
+    top: 0;
+    right: 10px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
 
-<title>Listado Materias</title>
+.nav-item:hover .btn-agregar {
+    opacity: 1;
+}
+    </style>
 </head>
 <body>
-    <div class="container">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th scope="col">Código</th>
-          <th scope="col">Nombre</th>
-          <th scope="col">Curso</th>
-          <th scope="col">Cantidad de Horas</th>
-          <th scope="col">Modalidad</th>
-          <th scope="col">Docente</th>
-          <th scope="col">Carrera</th>
-          <th scope="col">Estado</th>
-          <th scope="col">Edición</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr th:each="materia : ${listadoMaterias}">
-          <td th:text="${materia.codigo}"></td>
-          <td th:text="${materia.nombre}"></td>
-          <td th:text="${materia.curso}"></td>
-          <td th:text="${materia.cantidadHoras}"></td>
-          <td th:text="${materia.modalidad}"></td>
-          <td th:text="${materia.docente.nombre}"></td>
-          <td th:text="${materia.carrera.nombre}"></td>
-          <td th:text="${materia.estado}"></td>
-              <td>
-                <a th:href="@{'/borrarMateria/'+${materia.codigo}}" class="btn btn-danger">Borrar</a>                    
-                <a th:href="@{'/editarMateria/'+${materia.codigo}}" class="btn btn-warning">Modificar</a>
-            </td>
-        </tr>
-       </tbody>
-    </table>
+	<header class="bg-dark text-white text-center py-3">
+		<img th:src="@{/img/logo-fi.png}" alt="Logotipo" class="img-fluid"
+			style="max-height: 100px;">
+		<h1>Facultad de Ingeniería</h1>
+		<p>Educación para el futuro</p>
+	</header>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Facultad UNJu</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/listaCarrera}">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Acerca de</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Noticias</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contacto">Contacto</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container-fluid">
+        <div class="row">
+<aside class="col-md-3 bg-light">
+    <div class="p-3">
+        <h4>Menú</h4>
+        <ul class="nav flex-column">
+            <li class="nav-item position-relative">
+                <a class="nav-link" th:href="@{/listaCarrera}">Carreras</a>
+                <a th:href="@{/formularioCarrera}" class="btn btn-sm btn-primary btn-agregar">+</a>
+            </li>
+            <li class="nav-item position-relative">
+                <a class="nav-link" th:href="@{/listaDocente}">Docentes</a>
+                <a th:href="@{/formularioDocente}" class="btn btn-sm btn-primary btn-agregar">+</a>
+            </li>
+            <li class="nav-item position-relative">
+                <a class="nav-link" th:href="@{/listaAlumno}">Alumnos</a>
+                <a th:href="@{/formularioAlumno}" class="btn btn-sm btn-primary btn-agregar">+</a>
+            </li>
+            <li class="nav-item position-relative">
+                <a class="nav-link" th:href="@{/listaMateria}">Materias</a>
+                <a th:href="@{/formularioMateria}" class="btn btn-sm btn-primary btn-agregar">+</a>
+            </li>
+        </ul>
     </div>
-<script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js}"></script>
+</aside>
+
+            <main class="col-md-9">
+                <div class="p-3">
+                    <h2>Listado de Materias</h2>
+                    <a th:href="@{/formularioMateria}" class="btn btn-primary mb-3">Agregar Materia</a>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th scope="col">Código</th>
+                                <th scope="col">Nombre</th>
+                                <th scope="col">Curso</th>
+                                <th scope="col">Cantidad de Horas</th>
+                                <th scope="col">Modalidad</th>
+                                <th scope="col">Docente</th>
+                                <th scope="col">Carrera</th>
+                                <th scope="col">Estado</th>
+                                <th scope="col">Edición</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="materia : ${listadoMaterias}">
+                                <td th:text="${materia.codigo}"></td>
+                                <td th:text="${materia.nombre}"></td>
+                                <td th:text="${materia.curso}"></td>
+                                <td th:text="${materia.cantidadHoras}"></td>
+                                <td th:text="${materia.modalidad}"></td>
+                                <td th:text="${materia.docente.nombre}"></td>
+                                <td th:text="${materia.carrera.nombre}"></td>
+                                <td th:text="${materia.estado ? 'Activo' : 'Inactivo'}"></td>
+                                <td>
+                                    <a th:href="@{'/borrarMateria/' + ${materia.codigo}}" class="btn btn-danger">Borrar</a>
+                                    <a th:href="@{'/editarMateria/' + ${materia.codigo}}" class="btn btn-warning">Modificar</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </main>
+        </div>
+    </div>
+
+    <footer class="bg-dark text-white text-center py-3" id="contacto">
+		<p>E-mail: consultas@unju.edu.ar</p>
+		<p>Teléfono: (0388) 4244196 / 191 / 107</p>
+		<p>Dirección: Av.Bolivia 1239 | S.S. de Jujuy - Argentina</p>
+        <p>Síguenos en:
+            <a href="#" class="text-white">Facebook</a> |
+            <a href="#" class="text-white">Twitter</a> |
+            <a href="#" class="text-white">Instagram</a>
+        </p>
+        <p>@2024 UNJU. Todos los derechos reservados.</p>
+    </footer>
+
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
 </body>
 </html>
+
+
